# zero-to-genai-engineer

./: README.md
00_search_engine/notebooks/: 01_search_engine.ipynb  02_tfidf_explained.ipynb
02_Transformer_Architecture/: README.md
03_GPT_Evolution_and_Alignment/: GPT_Papers_Presentation.html  README.md
04_BPE_Temperature_Top_K_Top_P/: README.md  bpe_step_by_step.xlsx  llm_temperature_topp_topk.xlsx
05_Local_LLMs_and_API_Providers/: DISTILL_SPEC.md  README.md
05_Local_LLMs_and_API_Providers/apps/: requirements.txt  (+2 more)
05_Local_LLMs_and_API_Providers/distill/backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt
05_Local_LLMs_and_API_Providers/distill/backend/core/: config.py  exceptions.py  logging.py  prompt_manager.py  utils.py
05_Local_LLMs_and_API_Providers/distill/backend/providers/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  langchain_provider.py  openai_compatible.py
05_Local_LLMs_and_API_Providers/distill/backend/providers/stt/: aws_transcribe.py  base.py  factory.py  google_stt.py  openai_whisper.py  whisper_local.py
05_Local_LLMs_and_API_Providers/distill/backend/routers/: analyze.py  analyze_stream.py  evaluate.py  sessions.py  system.py  transcribe.py
05_Local_LLMs_and_API_Providers/distill/backend/services/: analyzer.py  assessor.py  evaluator.py
05_Local_LLMs_and_API_Providers/distill/backend/storage/: base.py  factory.py  memory_store.py  sqlite_store.py
05_Local_LLMs_and_API_Providers/distill/backend/tests/: conftest.py  test_config.py  test_providers.py  test_routers.py  test_services.py
(+72 files in other folders)
